# gnome-icon-theme-s

./: .gitignore  AUTHORS  COPYING  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  autogen.sh  configure  configure.ac  gnome-icon-theme-slate.pc.in  index.theme.in  index.theme.in.in  render-icon-theme.py
2.14.2-3/debian/: changelog  gnome-icon-theme.links  rules  watch
debian/: README.Debian  changelog  control  control.in  copyright  files  gnome-icon-theme.links  postinst  preinst  prerm  rules  triggers  watch
debian/patches/: 01_apps_icons_scalable.patch
gnome-legacy/: Makefile.am  index.theme.in
gnome-sakura/: Makefile.am  index.theme
gnome-seafoam/: Makefile.am  index.theme
gnome-slate/: Makefile.am  index.theme
gnome-stardust/: Makefile.am  index.theme
gnome-steel/: Makefile.am  index.theme
src/: Makefile.am  Makefile.in
